--- a/main code/index.html
+++ b/main code/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css">
         <title>Example</title>
     </head>
     <body class="bacgkround-box", "background-linear-gradient" >
